--- a/HTML2/image.html
+++ b/HTML2/image.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <img src="/HTML2/img.jpg.jpg" alt="filler image" height="100">
+    <img src="/HTML2/img.jpg" alt="filler image" height="100">
     <!-- never set height and width together as it distorts the image's aspect ratio -->
 </body>
 </html>
