--- a/Section 3/3.3 Image Elements/index.html
+++ b/Section 3/3.3 Image Elements/index.html
@@ -1,6 +1,4 @@
 <!-- Kitten image URL -->
-https://raw.githubusercontent.com/appbrewery/webdev/main/kitten.jpeg
+<h1>I love cats</h1>
 
-
-<!-- Puppy image URL -->
-https://raw.githubusercontent.com/appbrewery/webdev/main/puppy.gif
+<img src="https://raw.githubusercontent.com/appbrewery/webdev/main/kitten.jpeg" alt="Little Kitten image">
