--- a/Section 3/3.2 Anchor Elements/index.html
+++ b/Section 3/3.2 Anchor Elements/index.html
@@ -6,3 +6,9 @@
     <li><a href="bing.com">Bing</a></li>
     <li><a href="Chatgpt.com">ChatGPT</a></li>
 </ol>
+
+<ol start="5">
+    <li><a href="https://www.producthunt.com/">Product Hunt</a></li>
+    <li><a href="https://smashthewalls.com/">Smash the Walls</a></li>
+    <li><a href="https://www.nytimes.com/games/wordle">Wordle</a></li>
+  </ol>
