--- a/Section 6/6.3 CSS Box Model/index.html
+++ b/Section 6/6.3 CSS Box Model/index.html
@@ -12,15 +12,25 @@
 
 <body>
 
+  <div>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam at sapien porttitor urna elementum lacinia. In id magna pulvinar, ultricies lorem id, vehicula elit. Aliquam eu luctus nisl, vitae pellentesque magna. Phasellus dolor metus, laoreet ac convallis sit amet, efficitur sed dolor.
+    </p>
+  </div>
 
+  <div>
+    
+  </div>
+  
+  <div>
+
+  </div>
   <!-- TODOs:
 1. Create 3 Boxes using the div element.
 2. Set their sizes to 200px heigh by 200px wide.
 3. Set different background colors for each of the boxes (I used cadetblue, gold and indianred).
 4. Add a paragraph <p> element into the first div and add the following words:
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam at sapien porttitor urna elementum lacinia. In
-    id magna pulvinar, ultricies lorem id, vehicula elit. Aliquam eu luctus nisl, vitae pellentesque magna. Phasellus
-    dolor metus, laoreet ac convallis sit amet, efficitur sed dolor.
+    
 5. Set the 1st div to have 20px padding all around with a black 10px border.
 6. Fix the style of the <p> element to remove all margins.
 Hint: Use the CSS inspector in Chrome.
