--- a/Section 6/6.3 CSS Box Model/index.html
+++ b/Section 6/6.3 CSS Box Model/index.html
@@ -6,23 +6,38 @@
   <title>CSS Box Model</title>
   <style>
     /* Write your CSS code here */
+    div{
+      height: 200px;
+      width: 200px;
+    }
 
+    #one{
+      background-color: cadetblue;
+    }
+
+    #two{
+      background-color: gold;
+    }
+
+    #three{
+      backgroung-color: indianred;
+    }
   </style>
 </head>
 
 <body>
 
-  <div>
+  <div id="one">
     <p>
       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam at sapien porttitor urna elementum lacinia. In id magna pulvinar, ultricies lorem id, vehicula elit. Aliquam eu luctus nisl, vitae pellentesque magna. Phasellus dolor metus, laoreet ac convallis sit amet, efficitur sed dolor.
     </p>
   </div>
 
-  <div>
+  <div id="two">
     
   </div>
   
-  <div>
+  <div id="three">
 
   </div>
   <!-- TODOs:
