--- a/Section 6/6.3 CSS Box Model/index.html
+++ b/Section 6/6.3 CSS Box Model/index.html
@@ -13,14 +13,25 @@
 
     #one{
       background-color: cadetblue;
+      padding: 20px;
+      border: 10px solid green;
+    }
+
+    p{
+      margin: none;
     }
 
     #two{
       background-color: gold;
+      border: 10px solid green;
+      border-width: 20px 10px;
+      margin: 0px 260px;
     }
 
     #three{
-      backgroung-color: indianred;
+      background-color: indianred;
+      border: 10px solid green;
+      margin-left: 40px;
     }
   </style>
 </head>
@@ -33,7 +44,7 @@
     </p>
   </div>
 
-  <div id="two">
+  <div id="two">  
     
   </div>
   
@@ -41,16 +52,6 @@
 
   </div>
   <!-- TODOs:
-1. Create 3 Boxes using the div element.
-2. Set their sizes to 200px heigh by 200px wide.
-3. Set different background colors for each of the boxes (I used cadetblue, gold and indianred).
-4. Add a paragraph <p> element into the first div and add the following words:
-    
-5. Set the 1st div to have 20px padding all around with a black 10px border.
-6. Fix the style of the <p> element to remove all margins.
-Hint: Use the CSS inspector in Chrome.
-7. Set the 2nd div to have a 20px border on top and bottom and 10px border left and right. (See goal image)
-8. Set the 3rd div to have a 10px border 
 9. Set the margins for the divs so that each box corner touches the other. (See the goal image)
 -->
 
