--- a/Section 7/7.3 CSS Flag Project/index.html
+++ b/Section 7/7.3 CSS Flag Project/index.html
@@ -6,7 +6,33 @@
   <title>CSS Flag Project</title>
   <style>
     /* Write your CSS Code here */
+    .flag{
+      background-color: #CE1126;
+      height: 600px;
+      width: 900px;
+      position: relative;
+    }
+    .flag>div{
+      background-color: #002868;
+      height: 300px;
+      width: 900px;
+      position: absolute;
+      top: 150px;
+    }
     
+    .flag>div>div{
+      background-color: white;
+      height: 200px;
+      width:200px;
+      border-radius: 100%;
+      position: absolute;
+      left:350px;
+      top:50px;
+    }
+
+    p{
+      color: white;
+    }
   </style>
 </head>
 
