--- a/Section 7/7.2 CSS Positioning/index.html
+++ b/Section 7/7.2 CSS Positioning/index.html
@@ -5,6 +5,27 @@
   <title>CSS Positioning Exercise</title>
   <style>
     /* Write your code here */
+
+    .red-circle{
+      background-color:red;
+      width:200px;
+      height: 200px;
+      border-radius:100%;
+      position:absolute;
+      left: 250px;
+      top: 150px;
+    }
+    
+    .blue-box{
+      background-color: blue;
+      width: 500px;
+      height: 300px;
+      position: absolute;
+      left: 200px;
+      top:200px;
+
+    }
+
   </style>
 </head>
 
