--- a/Section 7/7.3 CSS Flag Project/index.html
+++ b/Section 7/7.3 CSS Flag Project/index.html
@@ -31,7 +31,14 @@
     }
 
     p{
+      margin:0;
       color: white;
+      font-size: 5rem;
+      text-align: center;;
+    }
+
+    body>div>div>div>p{
+      color: black;
     }
   </style>
 </head>
