Last commit of 2023 Yayyy

--- a/Section 8/8.1 CSS Float/index.html
+++ b/Section 8/8.1 CSS Float/index.html
@@ -19,17 +19,29 @@
       font-size: 2em;
     }
 
-    .cat {
-      background-color: aquamarine;
+    img[src="cat.jpeg"]{
+      float: left;
     }
 
+  
+    .cat {
+      background-color: aquamarine;
+      float: left;
+    }
+
+    img[src="dog.jpeg"]{
+      float: left;
+    }
+    
     .dog {
       background-color: coral;
+      float: right;
     }
 
     footer {
       text-align: center;
       background-color: blueviolet;
+      clear: both;
     }
   </style>
 </head>
