--- a/Section 8/8.3 Media Query/index.html
+++ b/Section 8/8.3 Media Query/index.html
@@ -15,8 +15,26 @@ TODO: Change the background color for each device
   <title>Media Query</title>
   <style>
     body {
-      background-color: aquamarine;
+      background-color: blue;
     }
+
+    @media(min-width:1601px){
+      body{background-color: red;}
+    }
+
+    @media (min-width:1201px) and (max-width:1600px) {
+      body{background-color: green;}
+    }
+
+    @media (min-width: 481px) and (max-width: 1200px){
+      body{
+        background-color: yellow;
+      }
+    
+    @media (min-width: 480px) {
+      body{
+        background-color: orange;
+      }      
   </style>
 </head>
 
