--- a/Section 9/9.0 Display Flex/index.html
+++ b/Section 9/9.0 Display Flex/index.html
@@ -17,6 +17,9 @@
     }
 
     .container {
+      display: flex;
+      gap: 5px;
+      float: right;
       padding: 10px;
       background-color: gold;
     }
@@ -27,7 +30,7 @@
 <body>
   <div class="container">
     <p>Page Layout Methods</p>
-
+    <br>
     <li><a href="./html-table.html">HTML Table</a></li>
     <li><a href="./inline-block.html">Inline-Block</li>
     <li><a href="./absolute-position.html">Absolute Positioning</li>
