--- a/Section 9/9.1 Flex Direction/index.html
+++ b/Section 9/9.1 Flex Direction/index.html
@@ -11,6 +11,7 @@
   -->
   <style>
     .container {
+      flex-direction: column;
       color: white;
       border: 5px solid gold;
       display: flex;
@@ -20,6 +21,14 @@
 Select all the elements that are the direct
 children of the .container class.
     */
+
+    .contfainer div{
+      flex-basis: 100px;
+    }
+
+    *{
+      width: 20px;
+    }
 
     .red {background-color: #eb4d4b;}
     .orange {background-color: #f0932b;}
