--- a/Section 6/6.0 CSS Colors/index.html
+++ b/Section 6/6.0 CSS Colors/index.html
@@ -5,6 +5,17 @@
   <meta charset="UTF-8">
   <title>Colors</title>
   <style>
+    html{
+      background-color: antiquewhite;
+    }
+    h1{
+      color: whitesmoke;
+      background-color: darkseagreen;
+    }
+    h2{
+      color:#FAF8f1;
+      background-color: #C58940;
+    }
   /* Write your CSS code here. */
     /* 1. Make the background of the webpage "antiquewhite"
     2. Make the h1 "whitesmoke"
