--- a/Section 6/6.3 CSS Box Model/index.html
+++ b/Section 6/6.3 CSS Box Model/index.html
@@ -6,13 +6,47 @@
   <title>CSS Box Model</title>
   <style>
     /* Write your CSS code here */
-
+    .b1{
+      background-color: cadetblue;
+      height: 200px;
+      width: 200px;
+      padding: 20px;
+      border: 10px solid black;
+    }
+    .b2{
+      background-color: gold;
+      height: 200px;
+      width: 200px;
+      border: 0 solid black;
+      border-width: 20px 10px;
+      margin-left: 260px;
+    }
+    .b3{
+      background-color: indianred;
+      height: 200px;
+      width: 200px;
+      border: 10px solid black;
+      margin-left: 40px;
+    }
+    p{
+      margin-block-start: 0;
+      margin-block-end: 0;
+    }
   </style>
 </head>
 
 <body>
+  <div class="b1">
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam at sapien porttitor urna elementum lacinia. In id magna pulvinar, ultricies lorem id, vehicula elit. Aliquam eu luctus nisl, vitae pellentesque magna. Phasellus dolor metus, laoreet ac convallis sit amet, efficitur sed dolor.
+    </p>
+  </div>
+  <div class="b2">
 
+  </div>
+  <div class="b3">
 
+  </div>
   <!-- TODOs:
 1. Create 3 Boxes using the div element.
 2. Set their sizes to 200px heigh by 200px wide.
