--- a/Section 6/6.4 Motivation Meme Project/index.html
+++ b/Section 6/6.4 Motivation Meme Project/index.html
@@ -1,4 +1,22 @@
-<!-- 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=100%, initial-scale=1.0">
+  <title>Motivation Meme</title>
+  <link rel="stylesheet" href="./style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap" rel="stylesheet">
+</head>
+<body>
+  <div>
+    <img src="./assets/images/daenerys.jpeg" alt="daenerys Holding an avocado egg">
+    <h1>That special moment</h1>
+    <p>When you find the perfect avocado at the market</p>
+  </div>
+</body>
+</html><!-- 
   TODO: Create a motivational post website.
 Style it how ever you like. 
 Look at the goal image for inspiration.
