--- a/Section 7/7.3 CSS Flag Project/index.html
+++ b/Section 7/7.3 CSS Flag Project/index.html
@@ -6,7 +6,37 @@
   <title>CSS Flag Project</title>
   <style>
     /* Write your CSS Code here */
-    
+    .flag{
+      background-color: #ce1126;
+      width: 900px;
+      height: 600px;
+      color: white;
+    }
+
+    .flag>div{
+      background-color: #002868;
+      width: 900px;
+      height: 300px;
+      position: absolute;
+      top:150px;
+    }
+
+    .flag>div>div{
+      background-color: white;
+      color: black;
+      height: 200px;
+      width: 200px;
+      border-radius: 100%;
+      position: relative;
+      top: 50px;
+      left:350px;
+    }
+
+    p{
+      margin-top: 0;
+      font-size: 5rem;
+      text-align: center;
+    }
   </style>
 </head>
 
