--- a/Section 7/7.2 CSS Positioning/index.html
+++ b/Section 7/7.2 CSS Positioning/index.html
@@ -5,11 +5,30 @@
   <title>CSS Positioning Exercise</title>
   <style>
     /* Write your code here */
+    .blue-box{
+      background-color: blue;
+      height: 300px;
+      width: 500px;
+      position: relative;
+      top: 200px;
+      left: 200px;
+    }
+
+    .red-circle{
+      background-color: red;
+      width: 200px;
+      height: 200px;
+      border-radius: 100%;
+      position: absolute;
+      top: 150px;
+      left: 250px;
+    }
   </style>
 </head>
 
 <body>
   <div class="blue-box">
+  
     <div class="red-circle">
     </div>
   </div>
