--- a/Section 9/9.0 Display Flex/index.html
+++ b/Section 9/9.0 Display Flex/index.html
@@ -17,20 +17,18 @@
     }
 
     .container {
-      display: flex;
-      gap: 5px;
-      float: right;
       padding: 10px;
       background-color: gold;
+      display: inline-flex;
+      gap: 10px;
     }
-
   </style>
 </head>
 
 <body>
   <div class="container">
     <p>Page Layout Methods</p>
-    <br>
+
     <li><a href="./html-table.html">HTML Table</a></li>
     <li><a href="./inline-block.html">Inline-Block</li>
     <li><a href="./absolute-position.html">Absolute Positioning</li>
