--- a/Section 10/10.0 Display Grid/index.html
+++ b/Section 10/10.0 Display Grid/index.html
@@ -7,6 +7,24 @@
     /* Write your code here */
     /* Each square should be 100px by 100px */
     /* My colours for white: #f0d9b5, black: #b58863 */
+    .white{
+      background-color: green;
+      height: 100px;
+      width: 100px;
+
+    }
+    .black{
+      background-color: blue;
+      height: 100px;
+      width: 100px;
+    }
+    .container{
+      display: grid;
+      width: 800px;
+      grid-template-columns:1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+      grid-template-rows:1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+      gap:0px;
+    }
   </style>
 </head>
 
