--- a/Section 9/9.4 Flexbox Pricing Table Project/index.html
+++ b/Section 9/9.4 Flexbox Pricing Table Project/index.html
@@ -12,9 +12,44 @@
       body {
         font-family: "Sono", sans-serif;
       }
-
+      .pricing-container{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        gap: 2rem;
+      }
+      .pricing-plan{
+        flex:1;
+        max-width: 400px;
+        background-color: whitesmoke;
+        text-align: center;
+        border-radius: 10%;
+      }
+      .plan-title{
+        font-weight: bold;
+      }
+      .plan-price{
+        font-weight: bold;
+        font-size: 2rem;
+      }
+      button{
+        background-color: orange;
+        border: 0;
+        color: white;
+        border-radius: 10%;
+      }
+      ul{
+        list-style-type: none;
+      }
       /* Hint: What can you do with a media query and flexbox? */
       @media (max-width: 1250px) {
+      .pricing-container{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
+      }
       }
     </style>
   </head>
