Javascript go brrr

--- a/Section 16/DOM Challenge Starting Files/index.html
+++ b/Section 16/DOM Challenge Starting Files/index.html
@@ -19,7 +19,7 @@
         <a href="https://www.google.com">Google</a>
       </li>
       <li class="list">Second</li>
-      <li class="list">Third</li>
+      <li class="list">Jujo</li>
     </ul>
 
   </body>
